MDEXP-621 Returned back